--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,4 +1,5 @@
 # reference = https://docs.docker.com/samples/django/
+
 FROM python:3
 
 ENV PYTHONUNBUFFERED=1
@@ -13,6 +14,6 @@ RUN pip install -r requirements.txt
 
 COPY . /api/
 
-EXPOSE 8000
+EXPOSE $PORT
 
 CMD ["bash", "-c", "python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:$PORT"]
