--- a/.github/workflows/api_ci.yml
+++ b/.github/workflows/api_ci.yml
@@ -1,4 +1,4 @@
-name: Build and Test
+name: CI (api)
 
 on:
   push:
@@ -13,7 +13,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: install dependencies
+      run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
     - name: api build
       run: |
           python -m pip install --upgrade pip
           docker-compose up --build -d api
+    
