--- a/.github/workflows/api_ci.yml
+++ b/.github/workflows/api_ci.yml
@@ -12,9 +12,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: code checkout 
+      uses: actions/checkout@v2
+
+    - name: check python version
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+
+    - name: install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r ./api/requirements.txt
+
     - name: api build
       run: |
           python -m pip install --upgrade pip
           docker-compose up --build -d api
-    
