--- a/.github/workflows/api_ci.yml
+++ b/.github/workflows/api_ci.yml
@@ -27,5 +27,10 @@ jobs:
 
     - name: api build
       run: |
-          python -m pip install --upgrade pip
-          docker-compose up --build -d api
+        python -m pip install --upgrade pip
+        docker-compose up --build -d api
+
+    - name: tests
+      run: docker-compose run api python manage.py test
+
+        
