--- a/.github/workflows/api_ci.yml
+++ b/.github/workflows/api_ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  health-check-job:
     runs-on: ubuntu-latest
 
     steps:
@@ -32,5 +32,11 @@ jobs:
 
     - name: tests
       run: docker-compose run api python manage.py test
+
+    - name: sonarcloud scan
+      uses: sonarsource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
         
