--- a/.github/workflows/api_ci.yml
+++ b/.github/workflows/api_ci.yml
@@ -26,17 +26,30 @@ jobs:
         pip install -r ./api/requirements.txt
 
     - name: api build
-      run: |
-        python -m pip install --upgrade pip
-        docker-compose up --build -d api
+        run: docker-compose up --build -d api
+        env:
+          DB_HOST: db
+          DB_NAME: myproject
+          DB_USER: myuser
+          DB_PASSWORD: password
 
     - name: tests
       run: docker-compose run api python manage.py test
+    
+    - name: coverage report
+        run: docker-compose run api coverage report
 
-    - name: sonarcloud
-      uses: sonarsource/sonarcloud-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  code_quality:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: sonarcloud scan
+        uses: SonarSource/sonarcloud-github-action@v1.4
+        with:
+          projectBaseDir: api
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_API }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
         
