--- a/.github/workflows/api_ci.yml
+++ b/.github/workflows/api_ci.yml
@@ -26,7 +26,8 @@ jobs:
         pip install -r ./api/requirements.txt
 
     - name: api build
-        run: docker-compose up --build -d api
+        run: |
+          docker-compose up --build -d api
         env:
           DB_HOST: db
           DB_NAME: myproject
