--- a/.github/workflows/api_ci.yml
+++ b/.github/workflows/api_ci.yml
@@ -26,13 +26,19 @@ jobs:
         pip install -r ./api/requirements.txt
 
     - name: api build
-      run: docker-compose up --build -d api
+      run: |
+        docker-compose up --build -d api
+      env:
+        DB_HOST: db
+        DB_NAME: myproject
+        DB_USER: myuser
+        DB_PASSWORD: password
 
     - name: tests
       run: docker-compose run api python manage.py test
     
     - name: coverage report
-        run: docker-compose run api coverage report
+      run: docker-compose run api coverage report
 
   code_quality:
     runs-on: ubuntu-latest
