--- a/.github/workflows/api_ci.yml
+++ b/.github/workflows/api_ci.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           projectBaseDir: api
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_API }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
