--- a/.github/workflows/api_ci.yml
+++ b/.github/workflows/api_ci.yml
@@ -39,6 +39,7 @@ jobs:
     
     - name: coverage report
       run: docker-compose run api coverage report
+      working-directory: api
 
   code_quality:
     runs-on: ubuntu-latest
