--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - .env
   api:
     build: ./api
-    command: bash -c "python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:$PORT"
+    command: bash -c "python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:8000"
     ports:
       - 8000:8000
     volumes:
