--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,7 @@ services:
     env_file:
       - .env
   api:
-    build:
-      context: api/
-      dockerfile: Dockerfile
+    build: ./api
     command: bash -c "python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:8000"
     ports:
       - 8000:8000
@@ -21,14 +19,12 @@ services:
     depends_on:
       - db
   client:
-    build:
-      context: client/
-      dockerfile: Dockerfile
+    build: ./client
     ports:
       - 8080:8080
     volumes:
       - ./client:/usr/app
-      - '/usr/app/node_modules'
+      - "/usr/app/node_modules"
     env_file:
       - .env
     depends_on:
