--- a/.github/workflows/api_ci.yml
+++ b/.github/workflows/api_ci.yml
@@ -47,6 +47,8 @@ jobs:
           fetch-depth: 0
       - name: sonarcloud scan
         uses: sonarsource/sonarcloud-github-action@master
+        with:
+          projectBaseDir: api
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
