--- a/.github/workflows/api_ci.yml
+++ b/.github/workflows/api_ci.yml
@@ -53,29 +53,29 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-  # coverage_and_code_quality_with_cc_and_codev:
-  #   runs-on: ubuntu-latest
+  coverage_and_code_quality_with_cc_and_codev:
+    runs-on: ubuntu-latest
     
-  #   name: coverage
-  #   steps:
-  #   - uses: actions/checkout@master
-  #   - name: Setup Python
-  #     uses: actions/setup-python@master
-  #     with:
-  #       python-version: 3.7
+    name: coverage
+    steps:
+    - uses: actions/checkout@master
+    - name: Setup Python
+      uses: actions/setup-python@master
+      with:
+        python-version: 3.7
 
-  #   - name: api build
-  #     run: docker-compose up --build -d api
+    - name: api build
+      run: docker-compose up --build -d api
 
-  #   - name: tests
-  #     run: docker-compose run api coverage run manage.py test
+    - name: tests
+      run: docker-compose run api coverage run manage.py test
 
-  #   - name: coverage report
-  #     run: docker-compose run api coverage xml
+    - name: coverage report
+      run: docker-compose run api coverage xml
 
-  #   - name: upload coverage to codecov
-  #     uses: codecov/codecov-action@v1
-  #     with:
-  #       token: ${{ secrets.CODECOV_TOKEN }}
-  #       fail_ci_if_error: true
-  #       verbose: true
+    - name: upload coverage to codecov
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: true
+        verbose: true
