--- a/.github/workflows/api_ci.yml
+++ b/.github/workflows/api_ci.yml
@@ -10,6 +10,7 @@ on:
 jobs:
 
   health-check-job:
+
     runs-on: ubuntu-latest
 
     steps:
@@ -38,13 +39,37 @@ jobs:
     - name: tests
       run: docker-compose run api python manage.py test
 
+    - name: stylesheet analysis
+      uses: ricardochaves/python-lint@v1.4.0
+      with:
+        python-root-list: "."
+        use-pylint: false
+        use-pycodestyle: false
+        use-flake8: true
+        use-black: false
+        use-mypy: false
+        use-isort: false
+        extra-pylint-options: ""
+        extra-pycodestyle-options: ""
+        extra-flake8-options: "--max-complexity=10 --max-line-length=127"
+        extra-black-options: ""
+        extra-mypy-options: ""
+        extra-isort-options: ""
+
+    # - name: appi lint
+    #   run: |
+    #       docker-compose run api flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --exclude=env
+    #       docker-compose run api flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --ignore=F401 --exclude=env
+
   code_quality_with_sonar:
+
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
         with:
-          # Disabling shallow clone is recommended for improving relevancy of reporting
           fetch-depth: 0
+
       - name: sonarcloud scan
         uses: sonarsource/sonarcloud-github-action@master
         with:
@@ -54,9 +79,9 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   coverage_and_code_quality_with_cc_and_codev:
+
     runs-on: ubuntu-latest
-    
-    name: coverage
+
     steps:
     - uses: actions/checkout@master
     - name: Setup Python
