--- a/.github/workflows/client_ci.yml
+++ b/.github/workflows/client_ci.yml
@@ -23,3 +23,20 @@ jobs:
 
       - name: tests
         run: docker-compose run client quasar test --unit jest
+
+  code_quality_with_sonar:
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: sonarcloud scan
+        uses: sonarsource/sonarcloud-github-action@master
+        with:
+          projectBaseDir: client
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
