test client lint

--- a/.github/workflows/api_ci.yml
+++ b/.github/workflows/api_ci.yml
@@ -36,7 +36,7 @@ jobs:
         DB_USER: myuser
         DB_PASSWORD: password
 
-    # if you want to have linter analysis, uncomment this.
+    # if you don't want to have linter analysis, comment this.
     - name: lint
       uses: lgeiger/pyflakes-action@master
 
