--- a/.github/workflows/client_ci.yml
+++ b/.github/workflows/client_ci.yml
@@ -21,8 +21,17 @@ jobs:
       - name: build
         run: docker-compose up --build -d client
 
+      - name: Install Node.js dependencies
+        run: cd client && yarn && yarn add eslint
+
+      - name: Run linters
+        uses: wearerequired/lint-action@v1
+        with:
+          eslint: true
+    
       - name: tests
         run: docker-compose run client quasar test --unit jest
+
 
   code_quality_with_sonar:
 
@@ -41,26 +50,3 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-  # coverage_and_code_quality_with_cc_and_codev:
-
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - uses: actions/setup-node@v1
-
-  #   - name: build
-  #     run: docker-compose up --build -d client
-
-  #   - name: tests
-  #     run: docker-compose run client quasar test --unit jest
-
-  #   - name: coverage report
-  #     run: docker-compose run client coverage xml
-
-  #   - name: upload coverage to codecov
-  #     uses: codecov/codecov-action@v1
-  #     with:
-  #       token: ${{ secrets.CODECOV_TOKEN }}
-  #       fail_ci_if_error: true
-  #       verbose: true
