--- a/.github/workflows/client_ci.yml
+++ b/.github/workflows/client_ci.yml
@@ -21,10 +21,7 @@ jobs:
       - name: build
         run: docker-compose up --build -d client
 
-      - name: Install Node.js dependencies
-        run: cd client && yarn && yarn add eslint
-
-      - name: Run linters
+      - name: lint
         uses: wearerequired/lint-action@v1
         with:
           eslint: true
