--- a/.github/workflows/api_ci.yml
+++ b/.github/workflows/api_ci.yml
@@ -87,26 +87,23 @@ jobs:
         fail_ci_if_error: true
         verbose: true
 
-  # deploy:
+  deploy:
 
-  #   needs: [health-check-job, code_quality_with_sonar]
+    # needs: [health-check-job, code_quality_with_sonar]
     
-  #   runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
     
-  #   defaults:
-  #     run:
-  #       working-directory: "api/"
+    defaults:
+      run:
+        working-directory: "api/"
 
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - name: docker login
-  #     env:
-  #       DOCKER_USER: ${{secrets.DOCKER_USER}}
-  #       DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-  #     run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+    steps:
+    - uses: actions/checkout@v2
+    - name: docker login
+      run: docker login -u ${{secrets.DOCKER_USER}} -p ${{secrets.DOCKER_PASSWORD}}
 
-  #   - name: Build the Docker image
-  #     run: docker build . --file Dockerfile --tag gabrielfilipe7/gabrielfilipe7unb-trabalho-individual-2020-2:api_latest
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag gabrielfilipe7/gabrielfilipe7unb-trabalho-individual-2020-2:api_latest
 
-  #   - name: Docker Push
-  #     run: docker push gabrielfilipe7/gabrielfilipe7unb/trabalho-individual-2020-2:api_latest 
+    - name: Docker Push
+      run: docker push gabrielfilipe7/gabrielfilipe7unb-trabalho-individual-2020-2:api_latest 
