add cd to front workflow

--- a/.github/workflows/client_ci.yml
+++ b/.github/workflows/client_ci.yml
@@ -44,3 +44,24 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
+  deploy:
+
+    needs: [health-check-job, code_quality_with_sonar]
+    
+    runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: "client/"
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: docker login
+      run: docker login -u ${{secrets.DOCKER_USER}} -p ${{secrets.DOCKER_PASSWORD}}
+
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag gabrielfilipe7/gabrielfilipe7unb-trabalho-individual-2020-2:client_latest
+
+    - name: Docker Push
+      run: docker push gabrielfilipe7/gabrielfilipe7unb-trabalho-individual-2020-2:client_latest 
+
