--- a/.github/workflows/api_ci.yml
+++ b/.github/workflows/api_ci.yml
@@ -107,3 +107,21 @@ jobs:
 
     - name: Docker Push
       run: docker push gabrielfilipe7/gabrielfilipe7unb-trabalho-individual-2020-2:api_latest 
+
+  deploy_to_heroku:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: heroku.
+        uses: gonuit/heroku-docker-deploy@v1.3.2
+        with:
+          email: ${{ secrets.HEROKU_EMAIL }}
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME_API }}
+          dockerfile_directory: ./api/
+          dockerfile_name: Dockerfile
+          docker_options: "--no-cache"
+          process_type: web
