--- a/.github/workflows/client_ci.yml
+++ b/.github/workflows/client_ci.yml
@@ -65,3 +65,20 @@ jobs:
     - name: Docker Push
       run: docker push gabrielfilipe7/gabrielfilipe7unb-trabalho-individual-2020-2:client_latest 
 
+  deploy_to_heroku:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        
+      - name: heroku
+        uses: gonuit/heroku-docker-deploy@v1.3.2
+        with:
+          email: ${{ secrets.HEROKU_EMAIL }}
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME_CLIENT }}
+          dockerfile_directory: ./client/
+          dockerfile_name: Dockerfile.Prod
+          docker_options: "--no-cache"
+          process_type: web
