--- a/.github/workflows/client_ci.yml
+++ b/.github/workflows/client_ci.yml
@@ -71,13 +71,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        
+
       - name: heroku
         uses: gonuit/heroku-docker-deploy@v1.3.2
         with:
           email: ${{ secrets.HEROKU_EMAIL }}
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: ${{ secrets.HEROKU_APP_NAME_CLIENT }}
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME_CLIENT_CLI }}
           dockerfile_directory: ./client/
           dockerfile_name: Dockerfile.Prod
           docker_options: "--no-cache"
